<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp">

    <ImageView
        android:id="@+id/img_pic"
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:minWidth="96dp"
        android:minHeight="96dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/txtvu_name"
        android:layout_width="259dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/img_pic"
        app:layout_constraintTop_toTopOf="@+id/img_pic" />

    <TextView
        android:id="@+id/txtvu_email"
        android:layout_width="259dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="17dp"
        android:text="@string/email"
        app:layout_constraintStart_toEndOf="@+id/img_pic"
        app:layout_constraintTop_toBottomOf="@+id/txtvu_name" />

    <TextView
        android:id="@+id/txtvu_phone"
        android:layout_width="259dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="17dp"
        android:text="@string/phone"
        app:layout_constraintStart_toEndOf="@+id/img_pic"
        app:layout_constraintTop_toBottomOf="@+id/txtvu_email" />

    <TextView
        android:id="@+id/txtvu_address"
        android:layout_width="259dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="17dp"
        android:text="@string/address"
        app:layout_constraintStart_toEndOf="@+id/img_pic"
        app:layout_constraintTop_toBottomOf="@+id/txtvu_phone" />

    <TextView
        android:id="@+id/txtvu_hiredate"
        android:layout_width="259dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/hiring_date"
        app:layout_constraintStart_toEndOf="@+id/txtvu_id"
        app:layout_constraintTop_toBottomOf="@+id/txtvu_address" />

    <TextView
        android:id="@+id/txtvu_id"
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/emp_id"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_pic"
        android:textAlignment="center"/>


</androidx.constraintlayout.widget.ConstraintLayout>