<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".StartNotificationActivity">

    <Button
        android:id="@+id/notify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_butoon"
        android:text="@string/notify_me"
        android:textColor="#fff" />

    <Button
        android:id="@+id/update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_butoon"
        android:text="@string/update_me"
        android:textColor="#fff" />

    <Button
        android:id="@+id/cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_butoon"
        android:text="@string/cancel_me"
        android:textColor="#fff" />

    <Button
        android:id="@+id/button11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_butoon"
        android:onClick="showSimpleNotification"
        android:text="Show Simple Notification"
        android:textColor="#fff" />

    <Button
        android:id="@+id/button12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_butoon"
        android:onClick="showBigPictureNotification"
        android:text="Show Big Picture Notification"
        android:textColor="#fff" />


</LinearLayout>